cmake_minimum_required(VERSION 3.1)

add_subdirectory(${AUTO_ROOT_PATH}/SampleProject/EmptyProject)
add_subdirectory(${AUTO_ROOT_PATH}/SampleProject/Sample_AntiAliasing)
add_subdirectory(${AUTO_ROOT_PATH}/SampleProject/Sample_Audio)
add_subdirectory(${AUTO_ROOT_PATH}/SampleProject/Sample_Bloom)
add_subdirectory(${AUTO_ROOT_PATH}/SampleProject/Sample_Debug)
add_subdirectory(${AUTO_ROOT_PATH}/SampleProject/Sample_DeferredShading)
add_subdirectory(${AUTO_ROOT_PATH}/SampleProject/Sample_DepthTest)
add_subdirectory(${AUTO_ROOT_PATH}/SampleProject/Sample_FileSystem)
add_subdirectory(${AUTO_ROOT_PATH}/SampleProject/Sample_FrameBuffers)
add_subdirectory(${AUTO_ROOT_PATH}/SampleProject/Sample_HDR)
add_subdirectory(${AUTO_ROOT_PATH}/SampleProject/Sample_MassInstantiation)
add_subdirectory(${AUTO_ROOT_PATH}/SampleProject/Sample_Model)
add_subdirectory(${AUTO_ROOT_PATH}/SampleProject/Sample_MoreCamera)
add_subdirectory(${AUTO_ROOT_PATH}/SampleProject/Sample_MultLights)
add_subdirectory(${AUTO_ROOT_PATH}/SampleProject/Sample_ParallaxMapping)
add_subdirectory(${AUTO_ROOT_PATH}/SampleProject/Sample_PBR)
add_subdirectory(${AUTO_ROOT_PATH}/SampleProject/Sample_Physics2D)
add_subdirectory(${AUTO_ROOT_PATH}/SampleProject/Sample_Physics3D)
add_subdirectory(${AUTO_ROOT_PATH}/SampleProject/Sample_Shadow)
add_subdirectory(${AUTO_ROOT_PATH}/SampleProject/Sample_ShadowPoint)
add_subdirectory(${AUTO_ROOT_PATH}/SampleProject/Sample_SkyBox)
add_subdirectory(${AUTO_ROOT_PATH}/SampleProject/Sample_SSAO)
add_subdirectory(${AUTO_ROOT_PATH}/SampleProject/Sample_StencilTest)
add_subdirectory(${AUTO_ROOT_PATH}/SampleProject/Sample_Texture)
add_subdirectory(${AUTO_ROOT_PATH}/SampleProject/Sample_Texture2D)
add_subdirectory(${AUTO_ROOT_PATH}/SampleProject/Sample_Time)
add_subdirectory(${AUTO_ROOT_PATH}/SampleProject/Sample_UI)
add_subdirectory(${AUTO_ROOT_PATH}/SampleProject/Sample_VertexExplode)

